# testing_templates

./: CMakeLists.txt  README.md
src/: '  CMakeLists.txt  a.cpp  first.cpp  first.h  second.cpp  second.h  templated.cpp  templated.h
unit_tests/: CMakeLists.txt  template_test.cpp
